# yconv

./: .gitignore  Cargo.toml  README.md  TEST_COVERAGE_ANALYSIS.md
src/: lib.rs  main.rs  sink.rs  source.rs
src/arrow/: builder.rs  mod.rs  sink.rs  source.rs
src/cdr/: deserializer.rs  mod.rs  transcoder.rs
src/input/: duckdb.rs  mod.rs  parquet.rs  vortex.rs
src/lance/: mod.rs  reader.rs  writer.rs
src/mcap/: cdr_reader.rs  mod.rs  protobuf_reader.rs  reader.rs  ros1_reader.rs
src/output/: duckdb.rs  mod.rs  parquet.rs  vortex.rs
src/protobuf/: mod.rs  schema.rs  transcoder.rs  writer.rs
src/ros1/: deserializer.rs  from_arrow.rs  mod.rs  msg_parser.rs  to_arrow.rs  transcoder.rs  writer.rs
src/schema/: evolution.rs  mod.rs
src/shell/: mod.rs
