[package]
name = "yconv"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "56"
clap = { version = "4", features = ["derive"] }
duckdb = { version = "1.2", features = ["bundled", "appender-arrow"] }
futures = "0.3"
lancedb = "0.23"
mcap = "0.24"
object_store = { version = "0.11", features = ["aws"] }
parquet = { version = "56", features = ["zstd", "object_store"] }
prost = "0.13"
prost-reflect = "0.15"
prost-types = "0.13"
rustyline = "15"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
vortex = "0.56"
vortex-file = "0.56"
vortex-io = "0.56"

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = true

